--- a/src/Notes/Math/Pre-Calculus/AGAAT/index.html
+++ b/src/Notes/Math/Pre-Calculus/AGAAT/index.html
@@ -91,6 +91,9 @@ Analytic Geometry and Nonlinear Systems
 </li><li>
 <a href="07_02.html">Ellipses and Hyperbolas</a>
 
+</li><li>
+<a href="07_03.html">The Conic Sections and Nonlinear Systems</a>
+
 </li></ol>
 </li></ol>
 </div>
