[AAII] Finish notes for 02_02 Ada Boost [skip ci]

--- a/src/Notes/Master/2C_2C/AAII/index.html
+++ b/src/Notes/Master/2C_2C/AAII/index.html
@@ -58,6 +58,9 @@
 <li>
 <a href="T2/01_boosting.html">Boosting</a>
 
+</li><li>
+<a href="T2/02_ada_boost.html">Ada Boost</a>
+
 </li></ol>
 </div>
   
