[AAII] Fix registry [skip ci]

--- a/src/Notes/Master/2C_2C/AAII/index.html
+++ b/src/Notes/Master/2C_2C/AAII/index.html
@@ -61,6 +61,9 @@
 </li><li>
 <a href="T2/02_ada_boost.html">Ada Boost</a>
 
+</li><li>
+<a href="T2/03_boosting_trees.html">Boosting Trees</a>
+
 </li></ol>
 </div>
   
