[AAII] Fix latex typo [skip ci]

--- a/src/Notes/Master/2C_2C/AAII/T2/03_boosting_trees.html
+++ b/src/Notes/Master/2C_2C/AAII/T2/03_boosting_trees.html
@@ -160,7 +160,7 @@ For two-class classification and exponential loss, it gives rise to the AdaBoost
 </p>
 
 \begin{align}
-\hat{\gamma_{jm}} = \log \frac{\sum_{x_i \in R_{jm}} w_i^{(m)} I(y_i = 1)}{x_i \in R_{jm}} w_i^{(m)} I(y_i = -1)}
+\hat{\gamma}_{jm} = \log \frac{\sum_{x_i \in R_{jm}} w_i^{(m)} I(y_i = 1)}{\sum_{x_i \in R_{jm}} w_i^{(m)} I(y_i = -1)}
 \end{align}
 
 <div id="Boosting Trees-Appendix"><h2 id="Appendix" class="header"><a href="#Boosting Trees-Appendix">Appendix</a></h2></div>
