[AAII] T2: start taking notes for 04 gradient boosting [skip ci]

--- a/src/Notes/Master/2C_2C/AAII/index.html
+++ b/src/Notes/Master/2C_2C/AAII/index.html
@@ -64,6 +64,9 @@
 </li><li>
 <a href="T2/03_boosting_trees.html">Boosting Trees</a>
 
+</li><li>
+<a href="T2/04_gradient_boosting.html">Gradient Boosting</a>
+
 </li></ol>
 </div>
   
