[MBJ] T2: Start notes on 01 [skip ci]

--- a/src/Notes/Master/2C_2C/MBJ/index.html
+++ b/src/Notes/Master/2C_2C/MBJ/index.html
@@ -40,6 +40,9 @@
 <li>
 <a href="01_intro.html">Introduccion a la Inferencia Bayesiana</a>
 
+</li><li>
+<a href="02_hierarchical_models.html">Modelos Jerárquicos</a>
+
 </li></ol>
 </div>
   
