[AGAA] T7: Add notes for 04 parametric equations [skip ci]

--- a/src/Notes/Master/2C_2C/AAII/T2/04_gradient_boosting.html
+++ b/src/Notes/Master/2C_2C/AAII/T2/04_gradient_boosting.html
@@ -191,7 +191,7 @@ For each boosting round \(m = 1, \cdots, M\):
 <li>
 Calculate the negative gradient for each data point 
 \begin{align}
-r_{im} = -left[\frac{\delta L(y_i, f(x_i))}{\delta f(x_i)}\right]_{f(x_i) = f_{m-1}(x_i)}
+r_{im} = -\left[\frac{\delta L(y_i, f(x_i))}{\delta f(x_i)}\right]_{f(x_i) = f_{m-1}(x_i)}
 \end{align}
 
 </li><li>
