--- a/src/Notes/Math/Pre-Calculus/AGAAT/07_04.html
+++ b/src/Notes/Math/Pre-Calculus/AGAAT/07_04.html
@@ -55,28 +55,20 @@ Make a table of corresponding values of \(t\), \(x\), and \(y\) over the domain 
 </p>
 
 <table>
-<tbody><tr>
-<td>
-\(t\)
-</td>
-<td>
-\(x\)
-</td>
-<td>
-\(y\)
-</td>
-</tr>
+<thead>
 <tr>
-<td>
----
-</td>
-<td>
----
-</td>
-<td>
----
-</td>
+<th>
+\(t\)
+</th>
+<th>
+\(x\)
+</th>
+<th>
+\(y\)
+</th>
 </tr>
+</thead>
+<tbody>
 <tr>
 <td>
 \(-3\)
@@ -154,7 +146,8 @@ Make a table of corresponding values of \(t\), \(x\), and \(y\) over the domain 
 \(9\)
 </td>
 </tr>
-</tbody></table>
+</tbody>
+</table>
 
 <p>
 Then plot the points.
