--- a/src/Notes/Master/2C_2C/AAII/T2/04_gradient_boosting.html
+++ b/src/Notes/Master/2C_2C/AAII/T2/04_gradient_boosting.html
@@ -36,7 +36,7 @@
 
 <hr>
 
-<div id="Gradient Boosting-Introduction"><h2 id="Introduction" class="header"><a href="#Gradient Boosting-Introduction">Introduction</a></h2></div>
+<div id="Gradient Boosting-Numerical Optimization via Gradient"><h2 id="Numerical Optimization via Gradient" class="header"><a href="#Gradient Boosting-Numerical Optimization via Gradient">Numerical Optimization via Gradient</a></h2></div>
 
 <p>
 Imagine you have a machine learning model that makes predictions, but it's not perfect. Gradient boosting is like a smart way to teach this model to make better predictions over time.
@@ -59,19 +59,19 @@ L(f) =  \sum_{i=1}^N L(y_i, f(x_i))
 \end{align}
 
 <p>
-where \(f\) is the prediction function. Therefore the optimization problem with respect to \(f\) can be summarized as follows:
-</p>
-
-\begin{align}
-\hat{f} = \arg \min_f L(f)
-\end{align}
-
-<p>
-where \(f \in \mathbb{R}^N\) are the parameters, in this case the predicted values for each instance on the dataset:
+where \(f \in \mathbb{R}^N\) is the prediction function and its evaluation at each instance \(x_i\) are the parameteres we want to optimize:
 </p>
 
 \begin{align}
 f = \{f(x_1), \cdots, f(x_i), \cdots, f(x_n)\}
+\end{align}
+
+<p>
+Therefore the optimization problem with respect to \(f\) can be summarized as follows:
+</p>
+
+\begin{align}
+\hat{f} = \arg \min_f L(f)
 \end{align}
 
 <p>
@@ -91,7 +91,7 @@ Here \(f_m\) represents the model at iteration \(m\), whereas \(h_m\) represents
 </p>
 
 <p>
-Here is a simple layout of how the algorithm optmizes:
+Here is a simple layout of how the algorithm optimizes:
 </p>
 
 <ul>
@@ -105,7 +105,7 @@ As the algorithm progresses through iterations (\(m = 1, 2, \cdots, M\)), each s
 <div id="Gradient Boosting-Steepest Descent"><h2 id="Steepest Descent" class="header"><a href="#Gradient Boosting-Steepest Descent">Steepest Descent</a></h2></div>
 
 <p>
-Steepest descent is a method used in optimization to find the minimum value of a function. This method chooses \(h_m = \rho_m g_m\) where \(\rho\) is a scalar and \(g_m\) is the gradient of \(L(f_{m-1})\), that is, the cost function evaluated at values predicted by the "previous model".
+Steepest descent is a method used in optimization to find the minimum value of a function. This method chooses \(h_m = \rho_m g_m\) where \(\rho_m\) is a scalar and \(g_m\) is the gradient of \(L(f_{m-1})\), that is, the cost function evaluated at values predicted by the "previous model".
 </p>
 
 <p>
@@ -198,7 +198,7 @@ r_{im} = -\left[\frac{\delta L(y_i, f(x_i))}{\delta f(x_i)}\right]_{f(x_i) = f_{
 Fit a regression tree to the gradients \(r_{im}\), which gives us the regions \(R_{jm}, j = 1, 2, \cdots, J_m\)
 
 </li><li>
-The step length \(\gamma\) is determined by minimizing the loss:
+The step length \(\gamma\) is determined by minimizing the loss using the previous model (\(f_{m-1}\)):
 \begin{align}
 \gamma_{jm} = \arg \min_{\gamma} \sum_{x_i \in R_{jm}} L(y_i, f_{m-1}(x_i) + \gamma)
 \end{align}
