[AAII] T2 start adding notes for 06 examples [skip ci]

--- a/src/Notes/Master/2C_2C/AAII/T2/05_interpretability.html
+++ b/src/Notes/Master/2C_2C/AAII/T2/05_interpretability.html
@@ -69,9 +69,6 @@ Each improvement is weighted by the indicator function \(I(v(t) = \mathcal{l})\)
 </li><li>
 We sum these improvements over the \(J - 1\) internal nodes on the tree, which are not terminal nodes.
 
-</li><li>
-
-
 </li></ul>
 <div id="Interpretability-Importance of Predictor Variables-Additive Models"><h3 id="Additive Models" class="header"><a href="#Interpretability-Importance of Predictor Variables-Additive Models">Additive Models</a></h3></div>
 
@@ -119,7 +116,7 @@ where:
 
 </li></ul>
 <p>
-The avergage can be estimated as follows:
+The average can be estimated as follows:
 </p>
 
 \begin{align}
