--- a/src/Notes/Master/2C_2C/AAII/index.html
+++ b/src/Notes/Master/2C_2C/AAII/index.html
@@ -70,6 +70,9 @@
 </li><li>
 <a href="T2/05_interpretability.html">Interpretability</a>
 
+</li><li>
+<a href="T2/06_examples.html">Examples</a>
+
 </li></ol>
 </div>
   
