[MBJ] T2: finish notes on 02 exchangeability [skip ci]

--- a/src/Notes/Master/2C_2C/MBJ/T2/index.html
+++ b/src/Notes/Master/2C_2C/MBJ/T2/index.html
@@ -29,7 +29,7 @@
     <hr>
     <div class="content">
 <p>
-<a href="index.html">Back</a>
+<a href="../index.html">Back</a>
 </p>
 
 <div id="T2. Modelos Jerarquicos"><h1 id="T2. Modelos Jerarquicos" class="header"><a href="#T2. Modelos Jerarquicos">T2. Modelos Jerarquicos</a></h1></div>
@@ -38,7 +38,10 @@
 
 <ol>
 <li>
-<a href="T2/Constructing a parametrized prior distribution.html">T2/Constructing a parametrized prior distribution</a>
+<a href="01.html">Constructing a parametrized prior distribution</a>
+
+</li><li>
+<a href="02.html">Exchangeability and hierarchical models</a>
 
 </li></ol>
 </div>
