--- a/src/Notes/Master/2C_2C/MBJ/index.html
+++ b/src/Notes/Master/2C_2C/MBJ/index.html
@@ -41,7 +41,7 @@
 <a href="01_intro.html">Introduccion a la Inferencia Bayesiana</a>
 
 </li><li>
-<a href="02_hierarchical_models.html">Modelos Jerárquicos</a>
+<a href="T2/index.html">Modelos Jerarquicos</a>
 
 </li></ol>
 </div>
