[AAII] T2 start notes on 07 practice [skip ci]

--- a/src/Notes/Master/2C_2C/AAII/index.html
+++ b/src/Notes/Master/2C_2C/AAII/index.html
@@ -73,6 +73,9 @@
 </li><li>
 <a href="T2/06_examples.html">Examples</a>
 
+</li><li>
+<a href="T2/07_practice.html">Practice</a>
+
 </li></ol>
 </div>
   
