[MBJ] T2 start 03 example [skip ci]

--- a/src/Notes/Master/2C_2C/MBJ/T2/index.html
+++ b/src/Notes/Master/2C_2C/MBJ/T2/index.html
@@ -43,6 +43,9 @@
 </li><li>
 <a href="02.html">Exchangeability and hierarchical models</a>
 
+</li><li>
+<a href="03.html">Bayesian analysis of conjugate hierarchical models</a>
+
 </li></ol>
 </div>
   
